# Propel_User_Guide_Scraper

./: README.md
scraper/: Cargo.toml
scraper/scraped_pages/: Add_Custom_Fields_to_a_Change_or_Quality_Record.txt  Add_Custom_Fields_to_a_Manufacturer_Item_or_Manufacturer_Part_Record.txt  Add_Custom_Fields_to_the_Item_Object.txt  Add_Fields_to_the_Where_Used_Tab.txt  Add_Values_to_a_Picklist_Field.txt  Add_a_Custom_Field_to_a_Permission_Set.txt  Add_or_Remove_Approvers_on_a_Declaration_Record.txt  Add_the_Has_Redlines_Field_to_the_BOM_Tab.txt  Apply_a_Criteria-Based_Approver_Rule_on_a_Record.txt  Approvals_Overview.txt  Approve,_Reject,_or_Reassign_a_Declaration_Record.txt  Assign_Propel_to_a_User.txt  Assign_a_Propel_Permission_Set.txt  Assign_a_User_to_a_Public_Group.txt  Autonumbers_Overview.txt  Categories_Overview.txt  Cloud_Document_Integration_Overview.txt  Complete_a_Training_Assignment.txt  Compliance_Overview.txt  Configure_Additional_Cost_Fields_to_Track_in_Part_Cost_History.txt  Configure_Dependent_Picklists.txt  Configure_Filters_for_Compliance_Statuses.txt  Configure_Filters_on_the_Declaration_Affected_Items_Tab.txt  Configure_Network_Access.txt  Configure_PDF_Generation_from_a_Word_Template.txt  Configure_Sharing_Rules.txt  Configure_Validation_Rules.txt  Configure_a_Category.txt  Configure_a_Category_through_Propel_Setup.txt  Configure_a_Category_through_the_Categories_Tab.txt  Configure_a_Change,_Quality,_or_Declaration_Phase.txt  Configure_a_Lifecycle.txt  Configure_a_Lifecycle_Phase_Transition.txt  Configure_a_Password_Policy.txt  (+69 more)
scraper/src/: main.rs
