[package]
name = "propel_user_guide_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
html2text = "0.7.1"
serde = "1.0.193"
thirtyfour = "0.31.0"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.5.0"
